# minato-vibe-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-image.yml
deploy/base/: deployment.yaml  httproute.yaml  kustomization.yaml  networkpolicy.yaml  resourcequota.yaml  service.yaml
src/minato_vibe_mcp/: __init__.py  auth.py  catalog.py  conventions.py  github_api.py  oauth.py  server.py  validation.py
