[project]
name = "minato-vibe-mcp"
version = "0.1.0"
description = "MCP server for creating and editing minato-vibe platform apps. Wraps github-mcp-server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
minato-vibe-mcp = "minato_vibe_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minato_vibe_mcp"]
